--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,57 @@
     <img src="../assets/sun.jpg" *ngIf="14 > 15">
     <img src="../assets/cold.jpg" *ngIf="14 <= 15">
 
-  </div>
-  <div class="lower">
+    <!--Search locaton bar-->
+    <div class="search-location">
+      <form>
+        <input type="text" name="search" placeholder="Entrer le nom de la ville">
+      </form>
+    </div>
 
+    <div class="weather-data">
+      <div class="location">Paris</div>
+      <div class="temperature">{{14.40 | number: '1.0-0'}}°C</div> <!--retourne le temperature au format entier -->
+    </div>
+  </div>
+
+  <div class="lower">
+    <div class="more-info-label">
+      More info
+    </div>
+    <div class="more-info-container">
+      <!--Temperature min-->
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/min.png">
+          <span>Min</span>
+        </div>
+        <div class="info-block-value">10°C</div>
+      </div>
+      <!--Temperature max--->
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/max.png">
+          <span>Max</span>
+        </div>
+        <div class="info-block-value">30°C</div>
+      </div>
+      <!--Humidity-->
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/precipitation.png">
+          <span>Humidity</span>
+        </div>
+        <div class="info-block-value">77%</div>
+      </div>
+      <!--Wind-->
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/wind.png">
+          <span>Wind</span>
+        </div>
+        <div class="info-block-value">5 km/h</div>
+      </div>
+    </div>
   </div>
 </div>
 
