--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
-$blue-1: #3c429e;
-$blue-2: #4c52ad;
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+
+$blue-1: #3c789e;
+$blue-2: #4c8bad;
 $yellow-1: #fac742;
 $white: #fff;
 $grey-1: #ededed;
