--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,13 +6,14 @@
     <!--Search locaton bar-->
     <div class="search-location">
       <form>
-        <input type="text" name="search" placeholder="Entrer le nom de la ville">
+        <mat-icon>search</mat-icon><input type="text" name="search" placeholder="Entrer le nom de la ville">
       </form>
     </div>
 
     <div class="weather-data">
       <div class="location">Paris</div>
       <div class="temperature">{{14.40 | number: '1.0-0'}}°C</div> <!--retourne le temperature au format entier -->
+      <div class="weather-type">Nuageux</div>
     </div>
   </div>
 
@@ -41,7 +42,7 @@
       <div class="info-block">
         <div class="info-block-label">
           <img src="../assets/precipitation.png">
-          <span>Humidity</span>
+          <span>Humidité</span>
         </div>
         <div class="info-block-value">77%</div>
       </div>
@@ -49,7 +50,7 @@
       <div class="info-block">
         <div class="info-block-label">
           <img src="../assets/wind.png">
-          <span>Wind</span>
+          <span>Vent</span>
         </div>
         <div class="info-block-value">5 km/h</div>
       </div>
