--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container" [ngStyle]="{'background-color': (dateTime() > 19 || dateTime() <= 4) ? '#23394A' : '#4c8bad' }">
   <div class="upper">
-    <img src="../assets/sun.jpg" *ngIf="14 > 15">
-    <img src="../assets/cold.jpg" *ngIf="14 <= 15">
+    <img src="../assets/day.jpg" *ngIf="(dateTime() > 4 || dateTime() <=19)">
+    <img src="../assets/night.jpg" *ngIf="(dateTime() > 19 || dateTime() <= 4) ">
 
     <!--Search locaton bar-->
     <div class="search-location">
@@ -13,13 +13,13 @@
     <div class="weather-data">
       <div class="location">Paris</div>
       <div class="temperature">{{14.40 | number: '1.0-0'}}°C</div> <!--retourne le temperature au format entier -->
-      <div class="weather-type">Nuageux</div>
+      <div class="weather-condition"><img src="../assets/clouds.png"> Nuageux</div> <!--remplacer l'image par l'icon du temps actuel-->
     </div>
   </div>
 
   <div class="lower">
     <div class="more-info-label">
-      More info
+      Informations météo
     </div>
     <div class="more-info-container">
       <!--Temperature min-->
@@ -49,10 +49,26 @@
       <!--Wind-->
       <div class="info-block">
         <div class="info-block-label">
-          <img src="../assets/wind.png">
+          <img src="../assets/windy.png">
           <span>Vent</span>
         </div>
         <div class="info-block-value">5 km/h</div>
+      </div>
+      <!--UV-->
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/rays.png">
+          <span>UV</span>
+        </div>
+        <div class="info-block-value">5</div>
+      </div>
+      <!--Air pressure-->
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/gauge.png">
+          <span>Pression de l'air</span>
+        </div>
+        <div class="info-block-value">1020 hPa</div>
       </div>
     </div>
   </div>
