--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -62,8 +62,14 @@
   font-weight: 900;
 }
 
-.weather-type{
+.weather-condition{
   color: $white;
+
+  img{
+    position: relative;
+    height: 24px;
+    width: 24px;
+  }
 }
 
 .more-info-label{
@@ -99,6 +105,7 @@
   span{
     color: $white;
     font-size: 0.8em;
+    text-align: center;
   }
 }
 
