--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@ $yellow-1: #fac742;
 $white: #fff;
 $grey-1: #ededed;
 $shadow-dark: rgba(0,0,0,0.3);
-$shadow-light: rgba(255,255,225,0.1);
+$shadow-light: rgba(255, 255, 225, 0.22);
 
 *{
   margin:0;
