--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -154,3 +154,81 @@
   }
 
 }
+
+.weather-hours{
+  position: relative;
+  bottom: 20%;
+  z-index: 100;
+  height: 60px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap : 10px;
+  left: 2%;
+  overflow-x: scroll;
+  overflow-y: hidden;
+
+  //&::-webkit-scrollbar{
+  //  width: 6px;
+  //}
+  &::-webkit-scrollbar-track
+  {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #b414e0;
+  }
+  &::-webkit-scrollbar
+  {
+    height: 6px;
+    //width: 6px;
+    background-color: #a91b1b;
+  }
+
+  &::-webkit-scrollbar-thumb
+  {
+    background-color: #000000;
+  }
+
+
+
+}
+
+//#wh::-webkit-scrollbar{
+//  width: 10px;
+//}
+
+.byHours{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+.icon-w{
+  height: 32px;
+  width: 32px;
+
+  img{
+    position: relative;
+    margin-top: 5px;
+    margin-left : 5px;
+    height: 20px;
+    width: 20px;
+  }
+}
+
+.hour{
+  color: $white;
+  font-size: 0.8em;
+}
+.iconn{
+  display: flex;
+  flex-direction: row;
+  //padding: 0.8em;
+
+
+}
+
+.temp{
+  color: $white;
+  font-size: 0.8em;
+}
