--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,7 +4,7 @@
   position: relative;
   overflow: hidden;
   width: 100%;
-  height:50%;
+  height:55%;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
 
@@ -31,7 +31,7 @@
 
 .container{
   width: 400px;
-  height: 80vh;
+  height: 85vh;
   background-color: $blue-2;
   border-radius: 20px;
   box-shadow: 10px 10px 10px $shadow-dark;
@@ -77,13 +77,15 @@
 }
 
 .more-info-container{
-  flex: 1;
+  //flex: 1;
   background-color: $shadow-light;
   border-radius: 20px;
-  margin-top: 1em;
+  margin-top: 0.8em;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  height: 80%;
+
 }
 
 .info-block{
@@ -157,44 +159,39 @@
 
 .weather-hours{
   position: relative;
-  bottom: 20%;
+  bottom: 22%;
   z-index: 100;
-  height: 60px;
+  height: 80px;
   display: flex;
   flex-direction: row;
   align-items: center;
   gap : 10px;
-  left: 2%;
+  left: 3%;
   overflow-x: scroll;
   overflow-y: hidden;
+  width : 95%;
 
-  //&::-webkit-scrollbar{
-  //  width: 6px;
-  //}
   &::-webkit-scrollbar-track
   {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    background-color: #b414e0;
+    background-color: transparent;
   }
   &::-webkit-scrollbar
   {
-    height: 6px;
-    //width: 6px;
-    background-color: #a91b1b;
+    height : 5px;
+    background-color: $shadow-dark;
+    border-radius: 20px;
+
   }
 
   &::-webkit-scrollbar-thumb
   {
-    background-color: #000000;
+    background-color: $white;
+    border-radius: 20px;
+
   }
 
-
-
 }
-
-//#wh::-webkit-scrollbar{
-//  width: 10px;
-//}
 
 .byHours{
   display: flex;
