--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,60 +23,48 @@
     <div class="weather-hours" id="wh">
       <!--TODO : a remplacer par une boucle-->
       <div class="byHours">
-        <div class="hour">16:00</div>
+        <div class="hour">Now</div>
         <div class="icon-w"><img src="../assets/precipitation.png"></div>
-        <div class="temp">{{20.30 | number: '1.0-0'}}°C</div>
+        <div class="temp">{{11.30 | number: '1.0-0'}}°C</div>
+      </div>
+      <div class="byHours">
+        <div class="hour">12:00</div>
+        <div class="icon-w"><img src="../assets/precipitation.png"></div>
+        <div class="temp">{{10.30 | number: '1.0-0'}}°C</div>
+      </div>
+      <div class="byHours">
+        <div class="hour">13:00</div>
+        <div class="icon-w"><img src="../assets/precipitation.png"></div>
+        <div class="temp">{{7.30 | number: '1.0-0'}}°C</div>
+      </div>
+      <div class="byHours">
+        <div class="hour">14:00</div>
+        <div class="icon-w"><img src="../assets/precipitation.png"></div>
+        <div class="temp">{{8.30 | number: '1.0-0'}}°C</div>
+      </div>
+      <div class="byHours">
+        <div class="hour">15:00</div>
+        <div class="icon-w"><img src="../assets/precipitation.png"></div>
+        <div class="temp">{{5.30 | number: '1.0-0'}}°C</div>
       </div>
       <div class="byHours">
         <div class="hour">16:00</div>
         <div class="icon-w"><img src="../assets/precipitation.png"></div>
-        <div class="temp">{{20.30 | number: '1.0-0'}}°C</div>
+        <div class="temp">{{2.30 | number: '1.0-0'}}°C</div>
       </div>
       <div class="byHours">
-        <div class="hour">16:00</div>
+        <div class="hour">17:00</div>
         <div class="icon-w"><img src="../assets/precipitation.png"></div>
-        <div class="temp">{{20.30 | number: '1.0-0'}}°C</div>
+        <div class="temp">{{0.30 | number: '1.0-0'}}°C</div>
       </div>
       <div class="byHours">
-        <div class="hour">16:00</div>
+        <div class="hour">18:00</div>
         <div class="icon-w"><img src="../assets/precipitation.png"></div>
-        <div class="temp">{{20.30 | number: '1.0-0'}}°C</div>
+        <div class="temp">{{-1.30 | number: '1.0-0'}}°C</div>
       </div>
-      <div class="byHours">
-        <div class="hour">16:00</div>
-        <div class="icon-w"><img src="../assets/precipitation.png"></div>
-        <div class="temp">{{20.30 | number: '1.0-0'}}°C</div>
-      </div>
-      <div class="byHours">
-        <div class="hour">16:00</div>
-        <div class="icon-w"><img src="../assets/precipitation.png"></div>
-        <div class="temp">{{20.30 | number: '1.0-0'}}°C</div>
-      </div>
-      <div class="byHours">
-        <div class="hour">16:00</div>
-        <div class="icon-w"><img src="../assets/precipitation.png"></div>
-        <div class="temp">{{20.30 | number: '1.0-0'}}°C</div>
-      </div>
-      <div class="byHours">
-        <div class="hour">16:00</div>
-        <div class="icon-w"><img src="../assets/precipitation.png"></div>
-        <div class="temp">{{20.30 | number: '1.0-0'}}°C</div>
-      </div>
-      <div class="byHours">
-        <div class="hour">16:00</div>
-        <div class="icon-w"><img src="../assets/precipitation.png"></div>
-        <div class="temp">{{20.30 | number: '1.0-0'}}°C</div>
-      </div>
-      <div class="byHours">
-        <div class="hour">16:00</div>
-        <div class="icon-w"><img src="../assets/precipitation.png"></div>
-        <div class="temp">{{20.30 | number: '1.0-0'}}°C</div>
-      </div>
-      <div class="byHours">
-        <div class="hour">16:00</div>
-        <div class="icon-w"><img src="../assets/precipitation.png"></div>
-        <div class="temp">{{20.30 | number: '1.0-0'}}°C</div>
-      </div>
+     
+     
+      
     </div>
   </div>
 
