--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
       <div class="byHours">
         <div class="hour">Now</div>
         <div class="icon-w"><img src="../assets/precipitation.png"></div>
-        <div class="temp">{{11.30 | number: '1.0-0'}}°C</div>
+        <div class="temp">{{weatherData.current.temp_c | number: '1.0-0'}}°C</div>
       </div>
       <div class="byHours">
         <div class="hour">12:00</div>
