--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,37 +30,37 @@
       <div class="byHours">
         <div class="hour">12:00</div>
         <div class="icon-w"><img src="../assets/precipitation.png"></div>
-        <div class="temp">{{10.30 | number: '1.0-0'}}°C</div>
+        <div class="temp">{{weatherData.forecast.forecastday[0].hour[12].temp_c}}°C</div>
       </div>
       <div class="byHours">
         <div class="hour">13:00</div>
         <div class="icon-w"><img src="../assets/precipitation.png"></div>
-        <div class="temp">{{7.30 | number: '1.0-0'}}°C</div>
+        <div class="temp">{{weatherData.forecast.forecastday[0].hour[13].temp_c| number: '1.0-0'}}°C</div>
       </div>
       <div class="byHours">
         <div class="hour">14:00</div>
         <div class="icon-w"><img src="../assets/precipitation.png"></div>
-        <div class="temp">{{8.30 | number: '1.0-0'}}°C</div>
+        <div class="temp">{{weatherData.forecast.forecastday[0].hour[14].temp_c | number: '1.0-0'}}°C</div>
       </div>
       <div class="byHours">
         <div class="hour">15:00</div>
         <div class="icon-w"><img src="../assets/precipitation.png"></div>
-        <div class="temp">{{5.30 | number: '1.0-0'}}°C</div>
+        <div class="temp">{{weatherData.forecast.forecastday[0].hour[15].temp_c | number: '1.0-0'}}°C</div>
       </div>
       <div class="byHours">
         <div class="hour">16:00</div>
         <div class="icon-w"><img src="../assets/precipitation.png"></div>
-        <div class="temp">{{2.30 | number: '1.0-0'}}°C</div>
+        <div class="temp">{{weatherData.forecast.forecastday[0].hour[16].temp_c | number: '1.0-0'}}°C</div>
       </div>
       <div class="byHours">
         <div class="hour">17:00</div>
         <div class="icon-w"><img src="../assets/precipitation.png"></div>
-        <div class="temp">{{0.30 | number: '1.0-0'}}°C</div>
+        <div class="temp">{{weatherData.forecast.forecastday[0].hour[17].temp_c | number: '1.0-0'}}°C</div>
       </div>
       <div class="byHours">
         <div class="hour">18:00</div>
         <div class="icon-w"><img src="../assets/precipitation.png"></div>
-        <div class="temp">{{-1.30 | number: '1.0-0'}}°C</div>
+        <div class="temp">{{weatherData.forecast.forecastday[0].hour[18].temp_c | number: '1.0-0'}}°C</div>
       </div>
      
      
